--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .env
 venv/
+portfolioplus/lib/python3.11/site-packages/lxml/html/__pycache__/__init__.cpython-311.pyc
+portfolioplus/lib/python3.11/site-packages/lxml/html/__pycache__/_setmixin.cpython-311.pyc
+portfolioplus/lib/python3.11/site-packages/lxml/html/__pycache__/defs.cpython-311.pyc
