--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL=postgresql://user:password@host/dbname
 
 # Flask secret key for session management (generate a random string)
 SECRET_KEY=your-random-secret-key-here
+
+# Finnhub API key (free at https://finnhub.io)
+FINNHUB_API_KEY=your-finnhub-api-key-here
