--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ SECRET_KEY=your-random-secret-key-here
 
 # Finnhub API key (free at https://finnhub.io)
 FINNHUB_API_KEY=your-finnhub-api-key-here
+
+# Inactivity timeout in minutes before showing "stay logged in" warning (e.g. 10 for production, 1 for testing)
+INACTIVITY_TIMEOUT_MINUTES=10
